updated the code in check_bits, which generates init values for LUT.

--- a/ip_repo/maroc_dc_1.0/src/check_bits.ipynb
+++ b/ip_repo/maroc_dc_1.0/src/check_bits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,25 +23,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "check_1bit(62)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "check_bits(26)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "0xfffefee9fee9e996\n",
-      "0x1fffefee7fee7e768\n"
+      "0xfffffffefffefee8\n"
      ]
     }
    ],
@@ -66,14 +88,13 @@
     "        init[1] = init[1] + (1 << i)\n",
     "    if(c > 2):\n",
     "        init[0] = init[0] + (1 << i)\n",
-    "        init[1] = init[1] + (1 << i)\n",
     "print('0x%x'%init[0])\n",
     "print('0x%x'%init[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "0xfffffffeffedfeda\n",
-      "0x1fffffffeffebfeb4\n"
+      "0xfffffffffffeffec\n"
      ]
     }
    ],
@@ -98,7 +119,6 @@
     "        init[1] = init[1] + (1 << i)\n",
     "    if(c > 2):\n",
     "        init[0] = init[0] + (1 << i)\n",
-    "        init[1] = init[1] + (1 << i)\n",
     "print('0x%x'%init[0])\n",
     "print('0x%x'%init[1])"
    ]
@@ -109,20 +129,12 @@
    "metadata": {},
    "source": [
     "### old value\n",
-    "stage0:  \n",
-    "0xfffefee9fee9e996\n",
-    "0xfffffffefffefee8 \n",
-    "stage1:  \n",
-    "0xfffffffeffedfeda \n",
-    "0xfffffffffffeffec \n",
-    "\n",
-    "### new value\n",
-    "stage0:  \n",
-    "0x0fffefee9fee9e996\n",
-    "0x1fffefee7fee7e768    \n",
-    "stage1:  \n",
-    "0x0fffffffeffedfeda\n",
-    "0x1fffffffeffebfeb4"
+    "* stage0:  \n",
+    "0xfffefee9fee9e996  \n",
+    "0xfffffffefffefee8   \n",
+    "* stage1/2/3/4:  \n",
+    "0xfffffffeffedfeda   \n",
+    "0xfffffffffffeffec   "
    ]
   },
   {
@@ -149,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
